packages/isar_db/test/errors/id/wrong_type.dart
// only int and string properties can be used as id

import 'package:isar_db/isar_db.dart';

@collection
class Test {
  late bool id;
}
